# VM

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
EmulatorTest/: BranchAnalyze.cpp  BranchAnalyze2.cpp  CMakeLists.txt  CRACKER.cpp  README.md  easyPatch.cpp  main.cpp
OEPTracker/: CMakeLists.txt  main.cpp
Utils/: Emulator.h  RapidMemoryDumper.h  RapidMemoryLoader.h  RapidMemoryPatcher.h  RapidRegisterStringParser.h  def.h
V1/: CMakeLists.txt  def.h  main.cpp
V2/: CMakeLists.txt  main.cpp
V4/: CMakeLists.txt  README.md  main.cpp  main_x86.cpp
